GNOME Bugzilla – Bug 695849
share: Misc bug fixes
Last modified: 2013-03-14 22:05:06 UTC
.
Created attachment 238877 [details] [review] share: Never return empty arguments This fixes xdg-email not working when the note is empty. xdg-email: text argument missing for --subject option Try 'xdg-email --help' for more information.
Created attachment 238878 [details] [review] share: Use g_strdelimit() instead of biji_str_replace() This modifies the string in place, instead of splitting it, and recreating it as biji_str_replace() does.
Created attachment 238879 [details] [review] share: No need for unused pipes
Review of attachment 238877 [details] [review]: yes
Review of attachment 238878 [details] [review]: good
Review of attachment 238879 [details] [review]: ok
Pushed to master Attachment 238877 [details] pushed as c6ffb00 - share: Never return empty arguments Attachment 238878 [details] pushed as d753a6f - share: Use g_strdelimit() instead of biji_str_replace() Attachment 238879 [details] pushed as 52835f2 - share: No need for unused pipes