share: Never return empty arguments

This fixes xdg-email not working when the note is empty.

xdg-email: text argument missing for --subject option
Try 'xdg-email --help' for more information.

https://bugzilla.gnome.org/show_bug.cgi?id=695849